core/static/css/ParallelCoordinates.css
/* Fonts, lines and brushes */

svg {
    font: 10px sans-serif;
}

.background path {
    fill: none;
    stroke: #ddd5;
    shape-rendering: crispEdges;
}

.foreground path {
    fill: none;
}

.brush .extent {
    fill-opacity: .3;
    stroke: #fff;
    shape-rendering: crispEdges;
}

.axis line,
.axis path {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}

.axis text {
    text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
    cursor: move;
}

.bold {
    stroke-width: 3;
    stroke-opacity: 1.0;
    filter: brightness(150%);
}

mark {
    background: orange;
    color: black;
}

.table-selected-line {
    background: #ddd !important;
}

